--- a/ipad-repl-app/app.json
+++ b/ipad-repl-app/app.json
@@ -4,9 +4,7 @@
     "slug": "ipad-repl",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -21,12 +19,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       }
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "simple ipad repl",
+    "githubUrl": "https://github.com/whiteceric/ipad-repl"
   }
 }
