--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - POSTGRES_PASSWORD=postgres
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: bash -c "./wait-for-it.sh db:5432 -- python manage.py runserver 0.0.0.0:8000"
     env_file: .env
     volumes:
       - .:/app
