--- a/ipad-repl-app/package.json
+++ b/ipad-repl-app/package.json
@@ -11,6 +11,7 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "assert": "^2.0.0",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
     "q": "^1.5.1",
