--- a/backend/docker-compose-prod.yml
+++ b/backend/docker-compose-prod.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres
     volumes:
-      - ./data/db:/var/lib/postgresql/data
+      - ./postgres_prod:/var/lib/postgresql/data
     env_file:
       - ./.db_env
   web:
