--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -4,6 +4,10 @@ FROM python:3.9.6-alpine
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
+# install psycopg2 dependencies
+RUN apk update \
+    && apk add postgresql-dev gcc python3-dev musl-dev
+
 # create the app user
 RUN addgroup -S app && adduser -S app -G app
 
