--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -25,7 +25,7 @@ RUN chmod +x  /app/entrypoint.prod.sh
 COPY . /app
 
 # chown all the files to the app user
-RUN chown -R app:app $APP_HOME
+RUN chown -R app:app /app
 
 # change to the app user
 USER app
