--- a/backend/docker-compose-prod.yml
+++ b/backend/docker-compose-prod.yml
@@ -1,6 +1,13 @@
 version: "3.9"
    
 services:
+  nginx:
+    build: ./nginx
+    ports:
+      80:80
+    depends_on:
+      - web
+    restart: "on-failure"
   db:
     image: postgres
     volumes:
@@ -11,9 +18,11 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile.prod
-    command: gunicorn replserver.wsgi:application --bind 0.0.0.0:80
+    command: bash -c "python manage.py makemigrations &&
+                      python manage.py migrate &&
+                      gunicorn replserver.wsgi:application --bind 0.0.0.0:8000"
     env_file: .env
-    ports:
-      - "80:80"
+    expose:
+      - "80"
     depends_on:
       - db
