--- a/backend/docker-compose-prod.yml
+++ b/backend/docker-compose-prod.yml
@@ -4,7 +4,7 @@ services:
   nginx:
     build: ./nginx
     ports:
-      80:80
+      - "80:80"
     depends_on:
       - web
     restart: "on-failure"
@@ -18,7 +18,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile.prod
-    command: bash -c "python manage.py makemigrations &&
+    command: bash -c "./wait-for-it.sh db:5432 -- python manage.py makemigrations &&
                       python manage.py migrate &&
                       gunicorn replserver.wsgi:application --bind 0.0.0.0:8000"
     env_file: .env
