--- a/backend/docker-compose-prod.yml
+++ b/backend/docker-compose-prod.yml
@@ -18,11 +18,9 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile.prod
-    command: bash -c "./wait-for-it.sh db:5432 -- python manage.py makemigrations &&
-                      python manage.py migrate &&
-                      gunicorn replserver.wsgi:application --bind 0.0.0.0:8000"
+    command: gunicorn replserver.wsgi:application --bind 0.0.0.0:8000
     env_file: .env
     expose:
-      - "80"
+      - 8000
     depends_on:
       - db
