--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -22,6 +22,7 @@ RUN sed -i 's/\r$//g'  /app/entrypoint.prod.sh
 
 # copy project
 COPY . /app
+RUN mkdir /app/staticfiles 
 
 # chown all the files to the app user
 RUN chown -R app:app /app
