--- a/backend/docker-compose-prod.yml
+++ b/backend/docker-compose-prod.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - web
     volumes:
-      - static_volume:/home/app/staticfiles
+      - static_volume:/app/staticfiles
     restart: "on-failure"
   db:
     image: postgres
@@ -27,7 +27,7 @@ services:
     depends_on:
       - db
     volumes:
-      - static_volume:/home/app/staticfiles
+      - static_volume:/app/staticfiles
 
 volumes:
   static_volume:
