--- a/backend/docker-compose-prod.yml
+++ b/backend/docker-compose-prod.yml
@@ -20,7 +20,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile.prod
-    command: /bin/sh -c "python managr.py migrate && 
+    command: /bin/sh -c "python manage.py migrate && 
                           python manage.py collectstatic &&
                           gunicorn replserver.wsgi:application --bind 0.0.0.0:8000"
     env_file: .env
