--- a/backend/docker-compose-prod.yml
+++ b/backend/docker-compose-prod.yml
@@ -20,8 +20,8 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile.prod
-    command: /bin/sh -c "python manage.py migrate && 
-                          python manage.py collectstatic &&
+    command: /bin/sh -c "python manage.py migrate --no-input && 
+                          python manage.py collectstatic --no-input &&
                           gunicorn replserver.wsgi:application --bind 0.0.0.0:8000"
     env_file: .env
     expose:
